[project]
name = "TicTacToe"
version = "0.1.0"
description = "A simple TicTacToe game implemented in Python."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"